<resources>
    <string name="app_name">MedManager</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_description">Track your medication intake on the go!</string>
    <string name="displayname">name</string>
    <string name="givename">givename</string>
    <string name="familyname">familyname</string>
    <string name="email">email</string>
    <string name="id">id</string>
    <string name="photoUrl">photoUrl</string>
    <string name="add_medication">Add Medication</string>
    <string name="action_logout">Log Out</string>
    <string name="search">Search</string>
    <string name="title_activity_medication">Add Medication</string>
    <string name="drug_name">Drug Name</string>
    <string name="drug_description">Medication Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="calendar_date_picker_result_values">%1$s\ %2$s\,%3$s</string>
    <string name="err_drugname">Please provide the name of the medication</string>
    <string name="err_description">Description is required</string>
    <string-array name="names">
        <item>Kristeen Coderre</item>
        <item>Libby Leslie</item>
        <item>Sherika Baynes</item>
        <item>Coralie Mckinny</item>
        <item>Jon Timms</item>
        <item>Ezekiel Cousineau</item>
        <item>Camila Mcgonigle</item>
        <item>Lakesha Sewell</item>
        <item>Hunter Kelsch</item>
        <item>Wendie Meltzer</item>
        <item>Doretha Preciado</item>
        <item>Marybelle Staton</item>
        <item>Angelo Robbins</item>
        <item>Norene Baptista</item>
        <item>Kathryn Mansfield</item>
        <item>Jamee Botts</item>
        <item>Jama Spiker</item>
        <item>Eugene Lazenby</item>
        <item>Tomika Blind</item>
        <item>Johana Massengill</item>
        <item>Randa Wommack</item>
        <item>Lang Medina</item>
        <item>Clyde Keena</item>
        <item>Malisa Knopp</item>
        <item>Yaeko Murakami</item>
        <item>Pa Gilmore</item>
        <item>Lashell Boyette</item>
        <item>Sherri Hogans</item>
        <item>Emelda Ahlquist</item>
        <item>Kala Bardin</item>
        <item>Alysia Parra</item>
        <item>Harris Yopp</item>
        <item>Claribel Freeney</item>
        <item>Laila Ekstrom</item>
        <item>Numbers Solomon</item>
        <item>Desirae Endicott</item>
        <item>Shandi Zahl</item>
        <item>Venessa Brunson</item>
        <item>Guillermo Abila</item>
        <item>Kenna Boles</item>
        <item>Daisey Mariscal</item>
        <item>Marry Gartrell</item>
        <item>Tyree Boateng</item>
        <item>Caryl Matheney</item>
        <item>Zenaida Perfecto</item>
        <item>Izola Stivers</item>
        <item>Rosario Rominger</item>
        <item>Bennett Donelson</item>
        <item>Sharell Hewes</item>
        <item>Kirk Sim</item>
    </string-array>

</resources>
